# PlateRecognition

./: .gitignore  README.md  config_example.txt  image.cabal
app/: Main.hs
src/: Lib.hs
src/Image/: IO.hs  Recognition.hs  RepaImage.hs  Transform.hs
src/Path/: IO.hs  Path.hs
