cabal-version: 1.12

name:           image
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/PabloTheSalad/PlateRecognition>
author:         Pavel Kovalenko
maintainer:     pskovalenko@protonmail.com
build-type:     Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/PabloTheSalad/PlateRecognition

library
  exposed-modules:
      Lib
    , Image.IO
    , Image.Transform
    , Image.RepaImage
    , Image.Recognition
    , Path.Path
    , Path.IO
  other-modules:
      Paths_image
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , JuicyPixels
    , repa
    , vector
    , transformers
    , extra
    , filepath
    , random
    , directory
    , containers
  default-language: Haskell2010

executable image-exe
  main-is: Main.hs
  other-modules:
      Paths_image
  hs-source-dirs:
      app
  ghc-options: -Wall -fmax-simplifier-iterations=20 -fsimplifier-phases=3 -rtsopts -threaded
               -fno-liberate-case -funfolding-use-threshold1000
               -funfolding-keeness-factor1000 -fllvm -optlo-O3
  build-depends:
      base >=4.7 && <5
    , image
  default-language: Haskell2010

test-suite image-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_image
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , image
  default-language: Haskell2010
